fix(ci): apply black/isort formatting and add pyproject.toml
- Format all Python files with black and isort
- Add pyproject.toml with tool configurations
- Update CI workflow to use isort --profile black
- Ensures consistent formatting across all environments

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
           pip install ruff black isort
           ruff check app/
           black --check app/
-          isort --check-only app/
+          isort --check-only --profile black app/
 
       - name: Run tests
         env:
