feat: v1.1.0 - Add caching, logging, retry logic, and CLI enhancements
Features:
- CLI progress spinner with rich library integration
- CLI config file support (.issuepilotrc in YAML/JSON)
- Request/response logging middleware with configurable LOG_LEVEL
- Improved AI engine error messages with custom exceptions
- GitHub API rate limit retry with exponential backoff
- Enhanced health check with dependency status
- API response caching with TTLCache (configurable TTL/size)
- Cache management endpoints (DELETE /cache, GET /cache/stats)
- New CLI commands: config, --no-cache flag

Dependencies:
- Added cachetools>=5.3.0
- Added rich>=13.0.0 (CLI)
- Added pyyaml>=6.0.0 (CLI)

Tests: All 65 tests passing

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,14 @@ MODEL=gpt-4o-mini
 DEBUG=false
 LOG_LEVEL=INFO
 
+# Caching Configuration
+CACHE_TTL=300
+CACHE_MAX_SIZE=100
+
+# GitHub Rate Limit Retry Settings
+GITHUB_MAX_RETRIES=3
+GITHUB_RETRY_DELAY=1.0
+
 # Duplicate Detection Settings
 SIMILARITY_THRESHOLD=0.75
 USE_EMBEDDINGS=true
