--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,9 @@ pydantic-settings>=2.1.0
 # Environment Variables
 python-dotenv>=1.0.0
 
+# Caching
+cachetools>=5.3.0
+
 # Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
