feat: Complete 10 major features for project enhancement
Features implemented:
1. Gemini AI support tests (12 tests)
2. Frontend Jest/RTL tests (47 tests)
3. Docker support (Dockerfiles + docker-compose)
4. CI/CD for frontend (GitHub Actions)
5. Batch analysis endpoint (/analyze/batch)
6. HTML export endpoint (/export/html)
7. Keyboard shortcuts (hook + dialog)
8. Rate limiting UI (indicator + banner)
9. Database persistence (SQLAlchemy + SQLite)
10. GitHub webhook support (auto-analysis)

Total: 122 backend tests + 47 frontend tests = 169 tests

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,12 @@ LOG_LEVEL=INFO
 CACHE_TTL=300
 CACHE_MAX_SIZE=100
 
+# Database Configuration (Optional)
+# Set to enable persistent storage of analysis results
+# SQLite: sqlite:///./issuepilot.db
+# PostgreSQL: postgresql://user:password@localhost/issuepilot
+DATABASE_URL=
+
 # GitHub Rate Limit Retry Settings
 GITHUB_MAX_RETRIES=3
 GITHUB_RETRY_DELAY=1.0
@@ -26,3 +32,15 @@ GITHUB_RETRY_DELAY=1.0
 # Duplicate Detection Settings
 SIMILARITY_THRESHOLD=0.75
 USE_EMBEDDINGS=true
+
+# GitHub Webhook Configuration (Optional)
+# Set up webhooks to auto-analyze issues when they're created/updated
+# Generate a random secret: openssl rand -hex 32
+GITHUB_WEBHOOK_SECRET=
+
+# Webhook behavior settings
+WEBHOOK_AUTO_ANALYZE_OPEN=true
+WEBHOOK_AUTO_ANALYZE_EDIT=false
+WEBHOOK_AUTO_ANALYZE_LABEL=false
+WEBHOOK_REQUIRED_LABEL=
+WEBHOOK_EXCLUDED_LABELS=
