--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ httpx>=0.25.0
 
 # AI/ML
 openai>=1.3.0
+google-generativeai>=0.8.0
 scikit-learn>=1.3.0
 numpy>=1.24.0
 
@@ -21,6 +22,9 @@ python-dotenv>=1.0.0
 
 # Caching
 cachetools>=5.3.0
+
+# Database (optional)
+sqlalchemy>=2.0.0
 
 # Testing
 pytest>=7.4.0
